@@ -55,6 +55,8 @@ Other changes:
 * New <redirector> type introduced to provide extreme I/O flexibility.
   Initial support for <exec>, <apply>, and <java> tasks.
 
+* <loadproperties> supports loading from a resource.
+
 Changes from Ant 1.6.1 to current Ant 1.6 CVS version
 =============================================
 
